api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list-api
  template:
    metadata:
      labels:
        app: todo-list-api
    spec:
      containers:
      - name: todo-list-api
        image: natiiyov/todo-list-api:1.0.0
        ports:
        - containerPort: 3001
