api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-api-service
spec:
  selector:
    app: todo-list-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
