api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: todo-list.niyov.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-list-api-service
            port:
              number: 80
